--- a/web/index.html
+++ b/web/index.html
@@ -15,7 +15,10 @@
     the `--base-href` argument provided to `flutter build`.
   -->
   <!-- <base href="$FLUTTER_BASE_HREF"> -->
+  
+  
   <base href="https://jogeanmcf.github.io/flutter_web_portfolio/">
+   <!-- <base href="/"> -->
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
@@ -27,9 +30,9 @@
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <!-- <link rel="icon" type="image/png" href="favicon.png"/> -->
 
-  <title>flutter_web_portfolio</title>
+  <title>Jogean</title>
   <link rel="manifest" href="manifest.json">
 
   <script>
@@ -42,17 +45,32 @@
 <body>
   <script>
     window.addEventListener('load', function(ev) {
-      // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
-        serviceWorker: {
-          serviceWorkerVersion: serviceWorkerVersion,
-        }
-      }).then(function(engineInitializer) {
-        return engineInitializer.initializeEngine();
-      }).then(function(appRunner) {
-        return appRunner.runApp();
-      });
-    });
+           var loading = document.querySelector('#loading');
+           loading.textContent = "Loading entrypoint...";
+           _flutter.loader.loadEntrypoint({
+             serviceWorker: {
+               serviceWorkerVersion: serviceWorkerVersion,
+             }
+           }).then(function(engineInitializer) {
+             loading.textContent = "Initializing engine...";
+             return engineInitializer.initializeEngine();
+           }).then(function(appRunner) {
+             loading.textContent = "Running app...";
+             return appRunner.runApp();
+           });
+         });
+    // window.addEventListener('load', function(ev) {
+    //   // Download main.dart.js
+    //   _flutter.loader.loadEntrypoint({
+    //     serviceWorker: {
+    //       serviceWorkerVersion: serviceWorkerVersion,
+    //     }
+    //   }).then(function(engineInitializer) {
+    //     return engineInitializer.initializeEngine();
+    //   }).then(function(appRunner) {
+    //     return appRunner.runApp();
+    //   });
+    // });
   </script>
 </body>
 </html>
