tring to commit again

--- a/web/index.html
+++ b/web/index.html
@@ -57,7 +57,7 @@
                serviceWorkerVersion: serviceWorkerVersion,
              }
            }).then(function(engineInitializer) {
-             loading.textContent = "Initializing engine...";
+            //  loading.textContent = "Initializing engine...";
              return engineInitializer.autoStart();
            }).then(function(appRunner) {
              loading.textContent = "";
